_g2/design-skin/origin/_scss/_outer.scss
/* ... */
@media (min-width: 768px){
footer {
  .footerMenu {
    ul { margin:10px 0; }
    li { float:left; }
    li a { border-left:1px solid #ccc;padding-top:0;padding-bottom:0; }
    li:last-child a { border-right:1px solid #ccc; }
  }
}
}

.sticky { display:block; overflow:hidden;padding:1em;background-color: #f5f5f5; }

/*-------------------------------------------*/
/* .archive
/*-------------------------------------------*/
.archive-header { margin-bottom:1em }
.archive-meta { margin-bottom:2em; }

/*-------------------------------------------*/
/* single
/*-------------------------------------------*/
#respond label { font-weight: lighter; }

/*-------------------------------------------*/
/* .comments-area
/*-------------------------------------------*/
.comments-title { line-height: 1.4em;font-size:24px; }
ol.comment-list { padding: 0;margin-top:0;}
li.comment { border:4px solid #eee; padding: 1em; margin:0 0 1em;list-style: none;
  ol.children { padding-left:1em;
    li.comment { border:none; }
  }
}
.comment-author { display:block; overflow:hidden;margin-bottom:10px;padding: 7px; background-color: #f5f5f5;border:4px solid #eee; }
.comment-meta { display:block; overflow:hidden;border-bottom:$border_primary;margin-bottom:10px; }
li.pingback { margin:0 0 1em;list-style:none;border-bottom:1px dotted #999; }
p.no-comments { background-color: #f3f3f3;border:1px solid #e5e5e5; text-align: center;padding: 2em; }

// theme check pass
.bypostauthor { color: $color_font_default; }

/*-------------------------------------------*/
/* search
/*-------------------------------------------*/
// form.searchform { margin:1em 0;
//   div { display: flex;
//     input[type=text]#s { width:64%;margin-right:2%; }
//     input[type=submit]#searchsubmit { float:right;width:34%; text-align: center;padding-left:2px;padding-right:2px; }
//   }
// }
// input#searchsubmit { vertical-align: top; }

/*-------------------------------------------*/
/* Widget .veu_prBlocks
/*-------------------------------------------*/
/* htmlに直接styleを書き込むので継承を弱くするために入れ子で書かない */
.prBlock {
  a{ color: #333;
    &:hover{ color: #333; text-decoration: none; }
  }
}
.prBlock_icon_outer { display: block; margin: 0 auto ; width: 80px; height: 80px; border-radius: 50%; position:relative;}
.prBlock_icon { position:absolute;font-size: 36px; top:50%;left:50%; transform: translateY(-50%) translateX(-50%); }
.prBlock_title{ margin-top:0.9em;margin-bottom: 0.7em; text-align: center; font-size: 18px; line-height: 1.4em; }
.prBlock_image{ position: relative; display: block; width: 120px; height:120px; margin: 0 auto;overflow:hidden;border-radius: 50%;text-indent:-9999px;
}
.prBlock_summary{ margin-bottom: 0.5em; text-align: center; font-size: 14px; line-height: 1.6em; }

@media screen and (max-width:992px){
.prBlock{ margin-bottom: 1.5em; }
}

/*-------------------------------------------*/
/* Navigation Block Description
/*-------------------------------------------*/
.wp-block-navigation-item__description {
    display:block;
    overflow:hidden;
    font-size:10px;
    line-height: 14px;
    text-align: center;
}

